Fix links, code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "useful-keys-proposal1",
+  "name": "use-key-state-proposal1",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
