--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-key-state-proposal2",
+  "name": "use-key-state-proposal",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -8,14 +8,15 @@
     "classnames": "2.2.6",
     "immer": "2.0.0",
     "lodash-es": "4.17.11",
-    "react": "16.8.2",
-    "react-dom": "16.8.2",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-scripts": "2.1.5",
     "react-spring": "8.0.7",
     "react-with-gesture": "4.0.4",
     "styled-components": "4.1.3",
     "tabbable": "3.1.2",
-    "use-immer": "0.1.0"
+    "use-immer": "0.1.0",
+    "use-key-state": "0.1.3"
   },
   "devDependencies": {},
   "scripts": {
